# bluefish-client

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  bluefish.cc
api/: CMakeLists.txt  Makefile  api.h  api_module.cpp  api_module.h  binary_api.cpp  binary_api.h  file.cpp  file.h  file_api.cpp  file_api.h  identifiers.h  master_block.h  serialization.cpp  serialization.h  (+2 more)
commands/: CMakeLists.txt  Makefile  add_file_command.cpp  add_file_command.h  challenge_verifier.cpp  challenge_verifier.h  change_password_command.cpp  change_password_command.h  change_username_command.cpp  change_username_command.h  command.h  command_composite.cpp  command_composite.h  commands_module.cpp  commands_module.h  create_backup_command.cpp  create_backup_command.h  format_command.cpp  format_command.h  list_files_command.cpp  list_files_command.h  print_usage_command.cpp  print_usage_command.h  read_file_command.cpp  read_file_command.h  remove_file_command.cpp  remove_file_command.h  rename_file_command.cpp  rename_file_command.h  restore_backup_command.cpp  restore_backup_command.h  verify_backup_command.cpp  verify_backup_command.h  verify_challenge_command.cpp  verify_challenge_command.h
commands/common/: CMakeLists.txt  Makefile  read_backup_file.cpp  read_backup_file.h
commands/models/: backup_file_dto.h  file.h
ui/: Makefile  (+1 more)
ui/console/commands/: CMakeLists.txt  Makefile  add_file_command.cpp  add_file_command.h  change_password_command.cpp  change_password_command.h  change_username_command.cpp  change_username_command.h  command.h  command_composite.cpp  command_composite.h  commands_module.cpp  commands_module.h  create_backup_command.cpp  create_backup_command.h  format_command.cpp  format_command.h  list_files_command.cpp  list_files_command.h  print_usage_command.cpp  print_usage_command.h  read_file_command.cpp  read_file_command.h  remove_file_command.cpp  remove_file_command.h  rename_file_command.cpp  rename_file_command.h  restore_backup_command.cpp  restore_backup_command.h  verify_backup_command.cpp  verify_backup_command.h
(+38 files in other folders)
